--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 author_name: '[~afrolov13]'
 trello:
   board_name: 'Job'
+  exclude_pattern: 'RDSITEKNVO-.*'
   host: 'api.trello.com'
   member_id: 'anatolii50'
   protocol: 'https'
